[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resilientops"
version = "0.2.0"
description = "Global supply chain operations simulator for OpenEnv (v2)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["env"]

[tool.setuptools.packages.find]
include = ["server*"]